--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
-<body>
-    <div class="container">
-      <header class="perfil">
-        <link href="estilo.css" rel="stylesheet">
-        <img class="perfil-foto" src="https://github.com/githubdogabriel.png" />
+<div class="container">
+    <header class="cabecalho">
+      <div class="perfil">
+        <link rel="stylesheet" href="estilo.css">
+        <img class="perfil-foto" src="https://github.com/githubdogabriel.png"/>
         <div class="titulo">
-          <h1>Gabriel Alves</h1>
-          <h3>Analista de TI e entusiasta de tecnologia #imersaodev</h3>
+            <h1>Gabriel Alves</h1>
+            <h3>Analista de TI e entusiasta de tecnologia #imersaodev</h3>
         </div>
-      </header>
-  
-      <main class="projetos">
-        <ul>Projetos<ul>
-            <li><a href="https://github.com/GitHubdoGabriel/CONVERSOR-MOEDA"> 💵 Conversor de moeda</a></li>
-            <li><a href="https://github.com/GitHubdoGabriel/MENTALISTA"> 💡 Mentalista</a></li>
-            <li><a href="https://github.com/GitHubdoGabriel/ALURAFLIX">🎥 Aluraflix</a></li>
-            <li><a href="https://github.com/GitHubdoGabriel/TABELA-CLASSIFICACAO">📝 Tabela de Classificação</a></li>
-            <li><a href="https://github.com/GitHubdoGabriel/SUPER-TRUNFO">🃏 Super Trunfo</a></li>
-      </main>
-    </div>
-  </body>
+      </div>
+      <div class="tema">
+        <button onClick="mudaModo()">Alterar tema</button>
+      </div>
+    </header>
+    <main class="portfolio">
+      <div class="projetos">
+        <ul>Projetos</ul>
+        <li><a href="https://github.com/GitHubdoGabriel/CONVERSOR-MOEDA"> 💵 Conversor de moeda</a></li>
+        <li><a href="https://github.com/GitHubdoGabriel/MENTALISTA"> 💡 Mentalista</a></li>
+        <li><a href="https://github.com/GitHubdoGabriel/ALURAFLIX">🎥 Aluraflix</a></li>
+        <li><a href="https://github.com/GitHubdoGabriel/TABELA-CLASSIFICACAO">📝 Tabela de Classificação</a></li>
+        <li><a href="https://github.com/GitHubdoGabriel/SUPER-TRUNFO">🃏 Super Trunfo</a></li>
+        
+      </div>
+      <div class="conquistas">
+        <ul>Conquistas</ul>
+          <li><img src="https://media.discordapp.net/attachments/826504749561413662/876882280377897041/Aula_1_-_Media.png?width=461&height=461"></li>
+          <li><img src="https://media.discordapp.net/attachments/826504749561413662/876882993124372571/Aula_9_-_HTML_e_CSS.png?width=461&height=461"></li>
+          <li><img src="https://media.discordapp.net/attachments/826504749561413662/876883011268902962/Dia_2_-_Calculadora.png?width=425&height=425"></li>
+      </div>
+      <script src="index.js"></script>
+    </main>
+  </div>
