--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <main class="portfolio">
       <div class="projetos">
         <ul>Projetos</ul>
-        <li><a href="https://github.com/GitHubdoGabriel/CONVERSOR-MOEDA"> 💵 Conversor de moeda</a></li>
-        <li><a href="https://github.com/GitHubdoGabriel/MENTALISTA"> 💡 Mentalista</a></li>
-        <li><a href="https://github.com/GitHubdoGabriel/ALURAFLIX">🎥 Aluraflix</a></li>
-        <li><a href="https://github.com/GitHubdoGabriel/TABELA-CLASSIFICACAO">📝 Tabela de Classificação</a></li>
-        <li><a href="https://github.com/GitHubdoGabriel/SUPER-TRUNFO">🃏 Super Trunfo</a></li>
+        <li><a href="https://githubdogabriel.github.io/CONVERSOR-MOEDA/"> 💵 Conversor de moeda</a></li>
+        <li><a href="https://githubdogabriel.github.io/MENTALISTA/"> 💡 Mentalista</a></li>
+        <li><a href="https://githubdogabriel.github.io/ALURAFLIX/">🎥 Aluraflix</a></li>
+        <li><a href="https://githubdogabriel.github.io/TABELA-CLASSIFICACAO/">📝 Tabela de Classificação</a></li>
+        <li><a href="https://githubdogabriel.github.io/SUPER-TRUNFO/">🃏 Super Trunfo</a></li>
         
       </div>
       <div class="conquistas">
